...
    <!-- BOTTOM NAVIGATION -->
    <string name="title_map_view" translatable="false">Map View</string>
    <string name="title_list_view" translatable="false">List View</string>
    <string name="title_workmates">Workmates</string>

    <!-- NAVIGATION DRAWER-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_your_lunch">Your Lunch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">logout</string>
...
    <string name="popup_message_choice_yes">Yes</string>
    <string name="popup_message_choice_no">No</string>
    <string name="rayon_de_recherche">Search radius</string>
    <string name="metres">meters</string>
    <string name="toolbar_title_mentor_chat_activity">Chat canal</string>
    <string name="text_input_title_mentor_chat_activity">Write your message</string>
    <string name="button_title_mentor_chat_activity">Send</string>
    <string name="text_view_mentor_chat_error">This discussion canal doesn\'t contains any messages yet</string>
    <string name="popup_title_permission_files_access">This application need autorization</string>
    <string name="toast_title_no_image_chosen">None picture choosen</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
...
