<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_lunch"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/menu_your_lunch" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chat" />


    </group>


</menu>
