<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dip">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_restaurants_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>