<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_toolbar">


    <item
        android:id="@+id/navigation_map_view"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map_view" />

    <item
        android:id="@+id/navigation_list_view"
        android:icon="@drawable/ic_viewlist"
        android:title="@string/title_list_view" />

    <item
        android:id="@+id/navigation_workmates"
        android:icon="@drawable/ic_workmates"
        android:title="@string/title_workmates" />

</menu>
