<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Articles_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/workmates_imageview_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/workmate_name_and_chosen_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/textview"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/workmates_imageview_profile"
        app:layout_constraintStart_toEndOf="@id/workmates_imageview_profile"
        app:layout_constraintTop_toTopOf="@id/workmates_imageview_profile" />

    <View
        android:id="@+id/separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/workmates_imageview_profile"
        app:layout_constraintTop_toBottomOf="@id/workmates_imageview_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>